kubernetes/apps/zitadel/zitadel/app/ciliumnetworkpolicy.yaml
---
apiVersion: cilium.io/v2
kind: CiliumNetworkPolicy
metadata:
  name: zitadel-allow-kube-api
spec:
  endpointSelector: {}
  egress:
    - toEntities:
        - kube-apiserver
